--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li> <a href="">Products</a> </li>
                 </ul>
                 <div class="navbar__icon">
-                    <i class="bx bx-moon" id="iconTheme"></i>
+                    <i class="bx bx-moon"></i>
                     <i class="bx bx-shopping-bag" id="iconShowCart">
                         <div class="productsInCart"><span>0</span></div>
                     </i>
@@ -99,6 +99,14 @@
                 </div>
 
             </div>
+
+            <div class="cart">
+                <div class="icon_close"><i class='bx bx-window-close'></i></div>
+                <div class="cart_products">
+
+                </div>
+                <div class="cart_total"></div>
+            </div>
         </main>
 
 
@@ -108,24 +116,24 @@
                 <div class="footer_reference">
                     <h3>Our information</h3>
                     <ul>
-                        <li>Toluca - MEXICO</li>
+                        <li><a href="">Toluca - MEXICO</a></li>
                     </ul>
                 </div>
                 <div class="footer_reference">
                     <h3>About Us</h3>
                     <ul>
-                        <li>Support Center</li>
-                        <li>Customer Support</li>
-                        <li>About Us</li>
-                        <li>Copy Right</li>
+                        <li><a href="">Support Center</a></li>
+                        <li><a href="">Customer Support</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Copy Right</a></li>
                     </ul>
                 </div>
                 <div class="footer_reference">
                     <h3>Product</h3>
                     <ul>
-                        <li>Hoodies</li>
-                        <li>Shirts</li>
-                        <li>Sweatshirts</li>
+                        <li><a href="">Hoodies</a></li>
+                        <li><a href="">Shirts</a></li>
+                        <li><a href="">Sweatshirts</a></li>
                     </ul>
                 </div>
                 <div class="footer_reference">
