--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 
 <body class="">
     <div class="container">
+        <div class="preloader">
+            <div class="spin">
+                <div class="spin">
+                    <div class="spin"></div>
+                </div>
+            </div>
+        </div>
+
         <header class="header">
             <nav class="navbar">
                 <div class="logo">
