--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="navbar__icon">
                     <i class="bx bx-moon"></i>
                     <i class="bx bx-shopping-bag" id="iconShowCart">
-                        <div class="productsInCart"><span>0</span></div>
+                        <div class="products_in_cart"></div>
                     </i>
                     <div class="icon_dashboard">
                         <i class="bx bxs-dashboard handleIconNavbar"></i>
@@ -113,7 +113,14 @@
                 <div class="cart_products">
 
                 </div>
-                <div class="cart_total"></div>
+                <div class="cart_total">
+                    <div class="cart_total_info">
+                        <p class="cart_total_info_items">0 items</p>
+                        <p class="cart_total_info_total">$ 0.00</p>
+                    </div>
+
+                    <button class="btn">Comprar</button>
+                </div>
             </div>
         </main>
 
