--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/filter.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' defer></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.js' defer></script>
     <script src="./assets/js/main.js" defer></script>
-    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js" defer></script>
+    <!-- <script src="./assets/js/script.js" defer></script> -->
+
     <title>Academlo Store</title>
 </head>
 
@@ -79,31 +84,34 @@
             </div>
 
             <div class="products">
-                <div class="products_filter">
-                    <div class="products_filter1">
-                        <div class="filter">
-                            <p class="filter_title">Show all</p>
-                            <p class="filter_subtitle">Show all products</p>
+                
+                <div class="controls">
+                    <div class="products_filter">
+                        <div class="products_filter1">
+                            <div class="filter_controls">
+                                <button class="filter" data-filter="all">All</button>
+                                <p class="filter_subtitle">Show all</p>
+                            </div>
+                            <div class="filter_controls">
+                                <button class="filter" data-filter=".shirt">Shirt</button>
+                                <p class="filter_subtitle">7 products</p>
+                            </div>
                         </div>
-                        <div class="filter">
-                            <p class="filter_title">Shirt</p>
-                            <p class="filter_subtitle">7 products</p>
+                        
+                        <div class="products_filter2">
+                            <div class="filter_controls">
+                                <button class="filter" data-filter=".hoddie">Hoddie</button>
+                                <p class="filter_subtitle">6 products</p>
+                            </div>
+                            <div class="filter_controls">
+                                <button class="filter" data-filter=".sweater">Sweater</button>
+                                <p class="filter_subtitle">5 products</p>
+                            </div>
                         </div>
                     </div>
+                </div> 
 
-                    <div class="products_filter2">
-                        <div class="filter">
-                            <p class="filter_title">Hoddie</p>
-                            <p class="filter_subtitle">6 products</p>
-                        </div>
-                        <div class="filter">
-                            <p class="filter_title">Sweater</p>
-                            <p class="filter_subtitle">5 products</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="products_items">
+                <div class="products_items" id="Container">
 
                 </div>
 
