--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/filter.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' defer></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.js' defer></script>
     <script src="./assets/js/main.js" defer></script>
-    <!-- <script src="./assets/js/script.js" defer></script> -->
-
     <title>Academlo Store</title>
 </head>
 
@@ -63,63 +60,65 @@
 
         <main class="main">
             <div class="presentation">
-                <div class="presentation_header">
-                    <div class="vacio">
-
-                    </div>
-                    <div class="presentation_header_img">
+                <div class="presentation__header">
+                    <div class="vacio"></div>
+                    <div class="presentation__header-img">
                         <img src="./assets/images/sweater2.png" alt="">
                     </div>
                 </div>
-                <div class="presentation_body">
+                <div class="presentation__body">
                     <h2>New Sweatshirt COLLECTIONS 2022</h2>
-                    <p class="presentation_body_description">Latest arrival of the new Hanes Midweight Crewneck
+                    <p class="presentation__body-description">Latest arrival of the new Hanes Midweight Crewneck
                         sweatshirt
                         imported
                         from the 2022 series, with
                         a modern design.</p>
-                    <p class="presentation_body_price">$14.00</p>
+                    <p class="presentation__body-price">$14.00</p>
                     <a href="#products">Show more</a>
                 </div>
             </div>
 
             <div class="products">
-                
-                <div class="controls">
-                    <div class="products_filter">
-                        <div class="products_filter1">
-                            <div class="filter_controls">
-                                <button class="filter" data-filter="all">All</button>
-                                <p class="filter_subtitle">Show all</p>
+                <div class="products__filter">
+                    <div class="products__filter-controllers">
+                        <div class="product__filter-division">
+                            <div class="product__filter">
+                                <button class="filter" data-filter="all">All
+                                    <p class="predocut__filter-subtitle">Show all</p>
+                                </button>
+
                             </div>
-                            <div class="filter_controls">
-                                <button class="filter" data-filter=".shirt">Shirt</button>
-                                <p class="filter_subtitle">7 products</p>
+                            <div class="product__filter">
+                                <button class="filter" data-filter=".shirt">Shirt
+                                    <p class="predocut__filter-subtitle">7 products</p>
+                                </button>
+
                             </div>
                         </div>
-                        
-                        <div class="products_filter2">
-                            <div class="filter_controls">
-                                <button class="filter" data-filter=".hoddie">Hoddie</button>
-                                <p class="filter_subtitle">6 products</p>
+
+                        <div class="product__filter-division">
+                            <div class="product__filter">
+                                <button class="filter" data-filter=".hoddie">Hoddie
+                                    <p class="predocut__filter-subtitle">6 products</p>
+                                </button>
+
                             </div>
-                            <div class="filter_controls">
-                                <button class="filter" data-filter=".sweater">Sweater</button>
-                                <p class="filter_subtitle">5 products</p>
+                            <div class="product__filter">
+                                <button class="filter" data-filter=".sweater">Sweater
+                                    <p class="predocut__filter-subtitle">5 products</p>
+                                </button>
+
                             </div>
                         </div>
                     </div>
-                </div> 
-
-                <div class="products_items" id="Container">
-
                 </div>
 
+                <div class="products__items" id="Container"></div>
             </div>
 
             <div class="cart">
-                <div class="icon_close"><i class='bx bx-window-close'></i></div>
-                <div class="cart_products">
+                <div class="icon__close"><i class='bx bx-window-close'></i></div>
+                <div class="cart__products">
 
                 </div>
                 <div class="cart_total">
@@ -133,17 +132,15 @@
             </div>
         </main>
 
-
-
         <footer class="footer">
-            <div class="footer_content">
-                <div class="footer_reference">
+            <div class="footer__content">
+                <div class="footer__reference">
                     <h3>Our information</h3>
                     <ul>
                         <li><a href="">Toluca - MEXICO</a></li>
                     </ul>
                 </div>
-                <div class="footer_reference">
+                <div class="footer__reference">
                     <h3>About Us</h3>
                     <ul>
                         <li><a href="">Support Center</a></li>
@@ -152,7 +149,7 @@
                         <li><a href="">Copy Right</a></li>
                     </ul>
                 </div>
-                <div class="footer_reference">
+                <div class="footer__reference">
                     <h3>Product</h3>
                     <ul>
                         <li><a href="">Hoodies</a></li>
@@ -160,7 +157,7 @@
                         <li><a href="">Sweatshirts</a></li>
                     </ul>
                 </div>
-                <div class="footer_reference">
+                <div class="footer__reference">
                     <h3>Social</h3>
                     <ul>
                         <li><a href="#">
@@ -171,12 +168,11 @@
                             </a></li>
                         <li><a href="#">
                                 <i class="bx bxl-instagram"></i>
-                            </a></li>
+                        </a></li>
                     </ul>
                 </div>
-
-
             </div>
+
             <a href="https://portafolio-jesuscamacho.netlify.app/" target="_blank">
                 <p><i class='bx bx-user-circle'></i> Jesús Camacho</p>
             </a>
@@ -187,10 +183,7 @@
                 <p><i class='bx bxl-github'></i> repositorio</p>
             </a>
 
-
-
         </footer>
-
     </div>
 </body>
 
