--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' defer></script>
@@ -173,15 +174,17 @@
                 </div>
             </div>
 
-            <a href="https://portafolio-jesuscamacho.netlify.app/" target="_blank">
-                <p><i class='bx bx-user-circle'></i> Jesús Camacho</p>
-            </a>
-            <a href="#">
-                <p><i class='bx bx-envelope'></i> redjorm12@gmail.com</p>
-            </a>
-            <a href="https://github.com/Redjorm/Academlo-Store" target="_blank">
-                <p><i class='bx bxl-github'></i> repositorio</p>
-            </a>
+            <div class="footer__autor">
+                <a href="https://portafolio-jesuscamacho.netlify.app/" target="_blank">
+                    <p><i class='bx bx-user-circle'></i> Jesús Camacho</p>
+                </a>
+                <a href="#">
+                    <p><i class='bx bx-envelope'></i> redjorm12@gmail.com</p>
+                </a>
+                <a href="https://github.com/Redjorm/Academlo-Store" target="_blank">
+                    <p><i class='bx bxl-github'></i> repositorio</p>
+                </a>
+            </div>
 
         </footer>
     </div>
