--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                 </div>
                 <ul class="navbar__ul">
                     <li class="home"> <a href="">Home</a> </li>
-                    <li> <a href="">Products</a> </li>
+                    <li> <a href="#container">Products</a> </li>
                 </ul>
                 <div class="navbar__icon">
                     <i class="bx bx-moon"></i>
                     <i class="bx bx-shopping-bag" id="iconShowCart">
-                        <div class="products_in_cart"></div>
+                        <div class="products__cart"></div>
                     </i>
                     <div class="icon_dashboard">
                         <i class="bx bxs-dashboard handleIconNavbar"></i>
@@ -122,16 +122,20 @@
                 <div class="cart__products">
 
                 </div>
-                <div class="cart_total">
-                    <div class="cart_total_info">
-                        <p class="cart_total_info_items">0 items</p>
-                        <p class="cart_total_info_total">$ 0.00</p>
+                <div class="cart__total">
+                    <div class="cart__total-info">
+                        <p class="cart__total-info-items">0 items</p>
+                        <i class='bx bxs-trash'></i>
+                        <p class="cart__total-info-total">$ 0.00</p>
                     </div>
 
                     <button class="btn">Comprar</button>
                 </div>
             </div>
         </main>
+
+        <div class="modal">
+        </div>
 
         <footer class="footer">
             <div class="footer__content">
@@ -153,9 +157,9 @@
                 <div class="footer__reference">
                     <h3>Product</h3>
                     <ul>
-                        <li><a href="">Hoodies</a></li>
-                        <li><a href="">Shirts</a></li>
-                        <li><a href="">Sweatshirts</a></li>
+                        <li><a href="#container">Hoodies</a></li>
+                        <li><a href="#container">Shirts</a></li>
+                        <li><a href="#container">Sweatshirts</a></li>
                     </ul>
                 </div>
                 <div class="footer__reference">
