--- a/index.html
+++ b/index.html
@@ -179,17 +179,17 @@
             </div>
 
             <div class="footer__autor">
-                <a href="https://portafolio-jesuscamacho.netlify.app/" target="_blank">
-                    <p><i class='bx bx-user-circle'></i> Jesús Camacho</p>
-                </a>
-                <a href="#">
-                    <p><i class='bx bx-envelope'></i> redjorm12@gmail.com</p>
-                </a>
-                <a href="https://github.com/Redjorm/Academlo-Store" target="_blank">
-                    <p><i class='bx bxl-github'></i> repositorio</p>
-                </a>
+                <div class="footer__autor-card">
+                  <img src="./assets/images/jesusC.jpeg" alt="Jesús Camacho" class="card__image">
+                  <p class="footer__autor-cardname">Jesús Camacho</p>
+                  <p class="footer__autor-cardname">redjorm12@gmail.com</p>
+                  <ul class="social-icons">
+                    <li><a href="https://github.com/Redjorm/Academlo-Store" target="_blank"><i class='bx bxl-github'></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/jes%C3%BAs-camacho-morales-34083522a/" target="_blank"><i class='bx bxl-linkedin'></i></i></a></li>
+                    <li><a href="https://portafolio-jesuscamacho.netlify.app/" target="_blank"><i class='bx bx-briefcase-alt'></i></a></li>
+                  </ul>
+                </div>
             </div>
-
         </footer>
     </div>
 </body>
