Arreglo icono menu

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <i class="bx bx-shopping-bag" id="iconShowCart">
                         <div class="products__cart"></div>
                     </i>
-                    <div class="icon_dashboard">
+                    <div class="icon__dashboard">
                         <i class="bx bxs-dashboard handleIconNavbar"></i>
                     </div>
                 </div>
