--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
             </div>
 
             <div class="cart">
-                <div class="icon__close"> 
-                    <p class="cart__title"><i class='bx bx-cart-alt'></i> Carrito</p> 
-                    <i class='bx bx-window-close'></i></div>
+                <div class="icon__close">
+                    <p class="cart__title"><i class='bx bx-cart-alt'></i> Carrito</p>
+                    <i class='bx bx-window-close'></i>
+                </div>
                 <div class="cart__products">
 
                 </div>
@@ -180,21 +181,24 @@
                             </a></li>
                         <li><a href="https://www.instagram.com/academlohq/" target="_blank">
                                 <i class="bx bxl-instagram"></i>
-                        </a></li>
+                            </a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="footer__autor">
                 <div class="footer__autor-card">
-                  <img src="./assets/images/jesusC.jpeg" alt="Jesús Camacho" class="card__image">
-                  <p class="footer__autor-cardname">Jesús Camacho</p>
-                  <p class="footer__autor-cardname">redjorm12@gmail.com</p>
-                  <ul class="social-icons">
-                    <li><a href="https://github.com/Redjorm/Academlo-Store" target="_blank"><i class='bx bxl-github'></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/jes%C3%BAs-camacho-morales-34083522a/" target="_blank"><i class='bx bxl-linkedin'></i></i></a></li>
-                    <li><a href="https://portafolio-jesuscamacho.netlify.app/" target="_blank"><i class='bx bx-briefcase-alt'></i></a></li>
-                  </ul>
+                    <img src="./assets/images/jesusC.jpeg" alt="Jesús Camacho" class="card__image">
+                    <p class="footer__autor-cardname">Jesús Camacho</p>
+                    <p class="footer__autor-cardname">redjorm12@gmail.com</p>
+                    <ul class="social-icons">
+                        <li><a href="https://github.com/Redjorm/Academlo-Store" target="_blank"><i
+                                    class='bx bxl-github'></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/jes%C3%BAs-camacho-morales-34083522a/"
+                                target="_blank"><i class='bx bxl-linkedin'></i></i></a></li>
+                        <li><a href="https://portafolio-jesuscamacho.netlify.app/" target="_blank"><i
+                                    class='bx bx-briefcase-alt'></i></a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
