--- a/index.html
+++ b/index.html
@@ -196,13 +196,15 @@
                                     class='bx bxl-github'></i></a></li>
                         <li><a href="https://www.linkedin.com/in/jes%C3%BAs-camacho-morales-34083522a/"
                                 target="_blank"><i class='bx bxl-linkedin'></i></i></a></li>
-                        <li><a href="https://portafolio-jesuscamacho.netlify.app/" target="_blank"><i
+                        <li><a href="https://portafolio-jesuscamacho.netlify.app/" target="_blank" id="portafolio"><i
                                     class='bx bx-briefcase-alt'></i></a></li>
                     </ul>
                 </div>
             </div>
         </footer>
     </div>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
 </body>
 
 </html>
